css/style.css
/* RESET */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
img {
    max-width: 100%;
}
 /* STYLES */
 body {
    font-family: 'Open Sans', sans-serif;
 }
/* UTILITIES */
/* Common */
.flex  {
    display: flex;
}
.wrap {
    flex-wrap: wrap;
}

/* Layout */
.container {
    width: 60%;
    margin: 0 auto;
    /* Debug */
    border: 1px solid black;
}
.jumbotron {
    background-color: #B4D0E7;
    /* Debug */
    width: 100%;
    height: 600px;
    border: 1px solid red;
}
.big-container {
    background-color: palevioletred;
    /* Debug */
    margin: 0 auto;
    width: 80%;
    height: 600px;
    border: 1px solid red;
}
.logo-container {
    width: 100%;
    background-color: blueviolet;
}
.row {
    /* Debug */
    margin: 0 auto;
    width: 80%;
    height: 500px;
    background-color: lightgreen;
    border: 1px solid black;
}
.col {
    /* Debug */
    width: 70%;
    background-color: lightyellow;
    border: 1px solid black;
}
.large-row {
    /* Debug */
    margin: 0 auto;
    width: 100%;
    background-color: lightgreen;
    border: 1px solid black;
}
.large-col {
    /* Debug */
    width: 100%;
    height: 600px;
    background-color: lightyellow;
    border: 1px solid black;
}
.card {
    width: 50%;
    height: 50%;
    border: 3px solid green;
}

/* HEADER */
/* header top */
.header-top {
    height: 80px;
    /* Debug */
    background-color: lightpink;
    border: 1px solid black;
}
.logo {
    /* Debug */
    width: 10%;
    height: 80px;
    background-color: lightslategray;
    border: 1px solid black;
}
.nav-menu {
    /* Debug */
    width: 80%;
    height: 80px;
    background-color: lightslategray;
    border: 1px solid black;
}
.nav-button {
    /* Debug */
    width: 10%;
    height: 80px;
    background-color: lightslategray;
    border: 1px solid black;
}
/* Jumbotron */

.main-title {
    /* Debug */
    margin: 0 auto;
    width: 80%;
    height: 100px;
    background-color: lightgreen;
    border: 1px solid black;
}

/* MAIN */

/* Business plan */
.business-plan {
    /* DEBUG */
    background-color: aquamarine;
    height: 800px;
}
.section-title {
     /* Debug */
    margin: 0 auto;
    width: 70%;
    height: 100px;
    background-color: red;
    border: 1px solid black;
}
.enterprise {
       /* Debug */
    margin: 0 auto;
    width: 70%;
    height: 200px;
    background-color: yellow;
    border: 1px solid black;
}

/* Partners */
.partners {
     /* DEBUG */
     background-color: rgb(0, 255, 145);
     height: 500px;
}
.operations {
     /* DEBUG */
     background-color: lightsalmon;
}
.users {
       /* Debug */
       margin: 0 auto;
       width: 70%;
       height: 200px;
       background-color: blue;
       border: 1px solid black;
}

/* Logos */
/* Call to actions */

.actions {
    /* Debug */
    background-color: #B4D0E7;
    width: 100%;
}

/* faq */
.faq {
    /* Debug */
    margin: 0 auto;
    background-color: blue;
    width: 70%;
    height: 400px;
}
/* FOOTER */

footer {
    background-color: black;
}
.language {
    margin: 0 auto;
    width: 70%;
    color: white;
    border: 2px solid red;
}

